Code cleanup, reformatting and some refactoring